2b. In the content section build the following design

--- a/index.html
+++ b/index.html
@@ -16,7 +16,44 @@
 
     <main>
         <section class="content">
-            Content section
+            <article>
+                <img src="images/vlisco.jpg">
+                <h1>Vlisco</h1>
+                <p>E-commerce with a colourful story</p>
+            </article>
+
+            <article>
+                <img src="images/copenhagen-airports.jpg">
+                <h1>Copenhagen Airports</h1>
+                <p>Knowing Your Customer in the Digital Age</p>
+            </article>
+
+            <article>
+                <img src="images/tv4-play.jpg">
+                <h1>TV4 Play</h1>
+                <p>From TV channel to leading content provider</p>
+            </article>
+
+            <article>
+                <img src="images/audi-city.jpg">
+                <h1>Audi City</h1>
+                <p>How to purchase a real car in a virtual store</p>
+            </article>
+
+            <article>
+                <img src="images/arla-foods.jpg">
+                <h1>Arla Foods</h1>
+                <p>Dairy production in Big Data</p>
+            </article>
+
+            <article>
+                <img src="images/xylem.jpg">
+                <h1>Xylem</h1>
+                <p>
+                    Helping the world's largest water technology provider
+                    solve the global water crisis through Business Transformation.
+                </p>
+            </article>
         </section>
 
         <section class="sidebar">
