3. Show/hide sidebar with a transition effect

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="index.html">Home</a>
         <a href="/about">About</a>
         <a href="/blog">Blog</a>
+        <a href="#sidebar" class="toggle-sidebar">Sidebar</a>
     </header>
 
     <main>
